--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "6.4.*",
+        "symfony/maker-bundle": "^1.59",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*"
     }
